Fixed issue with footer overlapping content

--- a/src/input.css
+++ b/src/input.css
@@ -241,7 +241,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 100vh;
+  height: auto;
   padding: 2rem;
 }
 
@@ -254,17 +254,10 @@
   width: 50%;
   align-self: flex-end;
 }
-body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  background-image: url("");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-}
+
 .p1 {
   font-size: 16px;
   font-weight: bold;
+  text-align: center;
+  width: 100%;
 }
